# telegram_rust_charge_bot

./: .gitignore  Cargo.toml  README.md  config_template.json
.github/workflows/: build.yml  release.yml
mobot/: Cargo.toml
mobot/src/lib/: client.rs  fake.rs  router.rs
mobot/src/lib/api/: message.rs  mod.rs  photo.rs  reply_to_message.rs
src/: command.rs  main.rs
src/bothandlers/: command.rs  mod.rs
src/data/: chargecny.rs  dataused.rs  exchangerate.rs  mod.rs  record_img.rs
src/tools/: charge_store.rs  config.rs  history.rs  http.rs  mod.rs  timer.rs
