[package]
name = "tg_charge_notion_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.114"
serde = "1.0.197"
surf = "2.3.2"
openssl = { version = "0.10.64", features = ["vendored"] }
log = "0.4"
tokio-cron-scheduler = "0.10.0"
mobot = { path = "./mobot" }
anyhow = "1.0.81"
pretty_env_logger = "0.5.0"
